<resources>
    <string name="app_name">MlkitApp</string>
    <string name="select_image_for_text_recognition">Select image for text recognition</string>
    <string name="find_text_button">Find text</string>
    <string name="find_face_contour_button">Find face contour</string>
    <string name="find_credit_card">Find Card Number</string>
    <string name="find_car_number">Find Car Number</string>
    <string name="permission_denied_photo">Please allow Silk + Sonder to use Storage or Camera permissions in your phone settings and retry. We want to ensure safety for our community members! Thank you.</string>
    <string name="car_number">Car Number:</string>
    <string name="card_number">Card Number:</string>
    <string name="card_expiry">Card Expiry:</string>
    <string name="text">Text</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="qr_type">QR Type</string>
    <string name="qr_content">QR content</string>
    <string name="find_image_labels">Find Image Labels</string>
    <string name="image_items">Image Items: </string>
    <string name="image_items_text"><b>%s</b> - %s accuracy \n</string>
    <string name="detect_objects">Detect Objects</string>
    <string name="smart_reply">Smart Reply</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="send_message_button_text">Send</string>
    <string name="empty_input_message">Enter some input text first.</string>
    <string name="title_switch_user">Switch emulated user</string>
    <string name="hint_input_text">Enter message text</string>
    <string name="title_generate_sensitive_history">Generate history with sensitive content</string>
    <string name="title_generate_basic_history">Generate basic history</string>
    <string name="switch_user_button">SWITCH</string>
    <string name="title_clear_history">Clear chat history</string>
    <string name="chatting_as_red">Chatting as Red User</string>
    <string name="chatting_as_blue">Chatting as Blue User</string>

    <!-- Error toast for when non-English language is used [CHAR_LIMIT=80] -->
    <string name="error_not_supported_language">A non-English language was
      detected, therefore no replies were generated.</string>
    <!-- Error toast for when no smart replies are generated [CHAR_LIMIT=75] -->
    <string name="error_no_reply">Success! But no appropriate replies were generated.</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

</resources>