<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="24dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/select_image_for_text_recognition"
        android:foregroundGravity="center_horizontal"
        android:scaleType="fitStart"
        android:src="@drawable/add_photo_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.example.mlkitapp.mlkit.GraphicOverlay
        android:id="@+id/graphic_overlay"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@id/image_view"
        app:layout_constraintEnd_toEndOf="@id/image_view"
        app:layout_constraintStart_toStartOf="@id/image_view"
        app:layout_constraintTop_toTopOf="@id/image_view" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cvCardDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/image_view"
        app:layout_constraintBottom_toTopOf="@id/btnScan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tvCardNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_number"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@id/tvCardExpiry"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvCardNumberInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_marginStart="5dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toEndOf="@id/tvCardNumber"
            app:layout_constraintTop_toTopOf="@id/tvCardNumber" />

        <TextView
            android:id="@+id/tvCardExpiry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:text="@string/card_expiry"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvCardNumber" />

        <TextView
            android:id="@+id/tvCardExpiryInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_marginStart="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tvCardExpiry"
            app:layout_constraintTop_toTopOf="@id/tvCardExpiry" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cvCarNumberPlate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/image_view"
        app:layout_constraintBottom_toTopOf="@id/btnScan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tvCarNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/car_number"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvCarNumberInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_marginStart="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tvCarNumber"
            app:layout_constraintTop_toTopOf="@id/tvCarNumber" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/textLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/image_view"
        app:layout_constraintBottom_toTopOf="@id/btnScan">
        <TextView
            android:id="@+id/textTitleTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/text"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/textTv"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
        <TextView
            android:id="@+id/textTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/textTitleTv"
            app:layout_constraintStart_toEndOf="@id/textTitleTv"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutQR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/btnScan"
        app:layout_constraintTop_toBottomOf="@id/image_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <TextView
            android:id="@+id/typeTitleTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textStyle="bold"
            android:text="@string/qr_type"
            android:textColor="@color/black"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
        <TextView
            android:id="@+id/typeTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textSize="15sp"
            app:layout_constraintTop_toTopOf="@id/typeTitleTv"
            app:layout_constraintStart_toEndOf="@id/typeTitleTv"/>
        <TextView
            android:id="@+id/contentTitleTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textStyle="bold"
            android:text="@string/qr_content"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/typeTitleTv"
            app:layout_constraintStart_toStartOf="@id/typeTitleTv"/>
        <TextView
            android:id="@+id/contentTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textSize="15sp"
            app:layout_constraintTop_toTopOf="@id/contentTitleTv"
            app:layout_constraintStart_toEndOf="@id/contentTitleTv"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:id="@+id/cvImageLabels"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginVertical="10dp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@id/button_image_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_view">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp">

            <TextView
                android:id="@+id/tvImageLabels"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginStart="5dp"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:layout_marginHorizontal="10dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <Button
        android:id="@+id/buttonCreditCard"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginHorizontal="10dp"
        android:text="@string/find_credit_card"
        app:layout_constraintBottom_toTopOf="@id/button_text"
        app:layout_constraintEnd_toStartOf="@id/buttonCarNumberPlate"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonCarNumberPlate"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/find_car_number"
        app:layout_constraintBottom_toBottomOf="@id/buttonCreditCard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/buttonCreditCard" />

    <Button
        android:id="@+id/button_text"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginHorizontal="10dp"
        android:text="@string/find_text_button"
        app:layout_constraintBottom_toBottomOf="@id/button_face"
        app:layout_constraintEnd_toStartOf="@id/button_face"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_face"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="20dp"
        android:text="@string/find_face_contour_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_text" />
    <Button
        android:id="@+id/btnScan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/scan_qr_code"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toStartOf="@id/button_image_label"
        app:layout_constraintStart_toStartOf="@id/buttonCreditCard"
        app:layout_constraintBottom_toTopOf="@id/buttonCreditCard"/>

    <Button
        android:id="@+id/button_image_label"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="10dp"
        android:text="@string/find_image_labels"
        app:layout_constraintBottom_toTopOf="@id/buttonCreditCard"
        app:layout_constraintStart_toEndOf="@id/btnScan"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>