<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".smart_reply.SmartReplyFragment">
    <Button
        android:id="@+id/switchEmulatedUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/switch_user_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/switchText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toTopOf="@id/switchEmulatedUser"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/switchEmulatedUser"
        app:layout_constraintEnd_toStartOf="@id/switchEmulatedUser"
        tools:text="Chat as Alice"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputTextLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_input_text"
        app:layout_constraintBottom_toTopOf="@id/switchEmulatedUser"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:ems="10"
            android:inputType="textCapSentences"/>
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/send_message_button_text"
        app:layout_constraintTop_toTopOf="@id/inputTextLayout"
        app:layout_constraintStart_toEndOf="@id/inputTextLayout"
        app:layout_constraintBottom_toBottomOf="@id/inputTextLayout"
        app:layout_constraintEnd_toEndOf="parent"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/smartRepliesRecycler"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/inputTextLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/smart_reply_chip"/>
    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/smartRepliesRecycler">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/chatHistory"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_message_local"
            tools:itemCount="20"/>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>